--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>Title</title>
+    <title>Twilight Guide</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body class="text white">
-      <nav class="navbar navbar-expand-lg navbar-light bg-dark text-white sticky">
+      <nav class="navbar navbar-expand-lg navbar-light bg-dark text-white sticky-top">
         <a class="navbar-brand text-white" href="#">Twilight Guide</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -35,6 +35,8 @@
                 aria-describedby="button-addon2">
               <div class="input-group-append"></nav>
 
+
+                <!-- to do, input field, add text over top of image -->
 <header class="container.fluid">
   <div class="row linkhead text-center">
      <div class="col-md-3 offset-1">
@@ -77,6 +79,23 @@
 
 
 </header>
+
+<main class="container.fluid" >
+<div class="row">
+  <div class="col-5 offset-1">
+    <h2>Confused and Lost?</h2>
+    <div>try our extensive guides to conquer all puzzles and banish the shadow!</div>
+  </div>
+  <div class="col-5 offset-1">
+    <div class="card">
+      <h5 class="card-header">Community Events</h5>
+      <div class="card-body">
+        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+      </div>
+    </div>
+  </div>
+</div>
+</main>
 
 
 
