--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
     <link rel="stylesheet" href="style.css">
   </head>
   <body class="text white">
@@ -36,8 +37,8 @@
               <div class="input-group-append"></nav>
 
 
-                <!-- to do, input field, add text over top of image -->
-<header class="container.fluid">
+                <!-- to do, line up left side of input field, finish with more input fields, add text over top of image -->
+<header class="container-fluid">
   <div class="row linkhead text-center">
      <div class="col-md-3 offset-1">
       <form class="cardtype">
@@ -80,21 +81,61 @@
 
 </header>
 
-<main class="container.fluid" >
-<div class="row">
-  <div class="col-5 offset-1">
+<main class="container-fluid" >
+<div class="community row bg-info justify-content-around justify-content-center">
+  <div class="col-5 pt-5">
     <h2>Confused and Lost?</h2>
-    <div>try our extensive guides to conquer all puzzles and banish the shadow!</div>
+    <div>try our extensive guides to conquer all puzzles and banish the shadow! <p>"Our world is one of balance... Just as there is light to drive away darkeness, so, too, is there benevolence to banish evil."</p></div>
   </div>
-  <div class="col-5 offset-1">
-    <div class="card">
-      <h5 class="card-header">Community Events</h5>
+  <div class="col-5">
+    <div class="card spill">
+      <h5 class="card-header">Get Involved</h5>
       <div class="card-body">
-        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+        <p class="card-text"> <i class="fab fa-redhat fa-2x pr-2"></i>Our brilliant game detectives will help with any questions about our guides.</p>
+        <p class="card-text"><i class="fas fa-angle-double-up fa-2x pr-2"></i>Level up your experience with extensive lore</p>
+        <p class="card-text"><i class="fab fa-discord fa-2x pr-2"></i>Connect to other players through our discord</p>
+        <p class="card-text"><i class="fas fa-running fa-2x pr-2"></i>Discover the secrets behind speed-running pros! </p>
       </div>
     </div>
   </div>
 </div>
+<!-- fix margin of the spill and these two element margins, the button needs adjusting -->
+   <div class="about row pt-5 justify-content-around">
+   <div class="col-5"><img class="mid" src="https://i.pinimg.com/236x/c8/d0/ee/c8d0eeacefb644f627e2a7572d5ceb89--zelda-twilight-princess-link-zelda.jpg" alt=""></div>
+   <div class="col-5 mt-5 pt-5"><h2><i class="fas fa-paint-brush fa-2x"></i> Now Accepting Art Submissions</h2> <h3>New Art Winner Every Month, details:</h3>
+       <div>Your art could be hosted live on this page! In order to enter you must provide the source file of any art piece, this art must also be of or inspired by the <b>Legend of Zelda franchise</b>. The winner will have art displayed for a week on this site and receive a $100 dollar prize! Goodluck with all the submissions!</div> <button class="btn btn-dark">Submit Art</button></div>
+   </div>
+
+  <div class="row reviews justify-content-around text-center">
+  <div class="col-3"><div class="card">
+    <div class="card-body">
+      <h2>"Quick and easy tips for when you're stuck"</h2>
+      <p>fan:</p>
+      <p>Tyler Hawks</p>
+    </div>
+  </div></div>
+  <div class="col-4">
+    <div class="card">
+      <div class="card-body">
+        <i class="far fa-star fa-2x"></i><i class="far fa-star fa-2x"></i><i class="far fa-star fa-2x"></i><i class="far fa-star fa-2x"></i><i class="far fa-star fa-2x"></i>
+        <h2>"Best place for speedrunning clips and community!"</h2>
+        <p>fan:</p>
+        <p>Jaden Boozle</p>
+      </div>
+    </div>
+  </div>
+  <div class="col-3">
+    <div class="card">
+      <div class="card-body">
+        <h2>"Connect with new life-long friends." </h2>
+        <p>fan:</p>
+        <p>Brooke Major</p>
+      </div>
+    </div>
+  </div>
+  </div>
+
+
 </main>
 
 
