done with framework

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body class="text white">
-      <nav class="navbar navbar-expand-lg navbar-light bg-dark text-white sticky-top">
+      <nav class="navbar navbar-expand-lg navbar-light nav-color text-white sticky-top">
         <a class="navbar-brand text-white" href="#">Twilight Guide</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -82,40 +82,40 @@
 </header>
 
 <main class="container-fluid" >
-<div class="community row bg-info justify-content-around justify-content-center">
+<div class="community row lightgreen justify-content-around justify-content-center">
   <div class="col-5 pt-5">
     <h2>Confused and Lost?</h2>
     <div>try our extensive guides to conquer all puzzles and banish the shadow! <p>"Our world is one of balance... Just as there is light to drive away darkeness, so, too, is there benevolence to banish evil."</p></div>
   </div>
   <div class="col-5">
-    <div class="card spill">
-      <h5 class="card-header">Get Involved</h5>
+    <div class="card spill darkgreen">
+      <h5 class="card-header text-white">Get Involved</h5>
       <div class="card-body">
-        <p class="card-text"> <i class="fab fa-redhat fa-2x pr-2"></i>Our brilliant game detectives will help with any questions about our guides.</p>
-        <p class="card-text"><i class="fas fa-angle-double-up fa-2x pr-2"></i>Level up your experience with extensive lore</p>
-        <p class="card-text"><i class="fab fa-discord fa-2x pr-2"></i>Connect to other players through our discord</p>
-        <p class="card-text"><i class="fas fa-running fa-2x pr-2"></i>Discover the secrets behind speed-running pros! </p>
+        <p class="card-text text-white"> <i class="fab fa-redhat fa-2x pr-2"></i>Our brilliant game detectives will help with any questions about our guides.</p>
+        <p class="card-text text-white"><i class="fas fa-angle-double-up fa-2x pr-2"></i>Level up your experience with extensive lore</p>
+        <p class="card-text text-white"><i class="fab fa-discord fa-2x pr-2"></i>Connect to other players through our discord</p>
+        <p class="card-text text-white"><i class="fas fa-running fa-2x pr-2"></i>Discover the secrets behind speed-running pros! </p>
       </div>
     </div>
   </div>
 </div>
 <!-- fix margin of the spill and these two element margins, the button needs adjusting -->
-   <div class="about row pt-5 justify-content-around">
-   <div class="col-5"><img class="mid" src="https://i.pinimg.com/236x/c8/d0/ee/c8d0eeacefb644f627e2a7572d5ceb89--zelda-twilight-princess-link-zelda.jpg" alt=""></div>
+   <div class="about row pt-5 justify-content-around light">
+   <div class="col-5"><img class="mid picshadow" src="https://i.pinimg.com/236x/c8/d0/ee/c8d0eeacefb644f627e2a7572d5ceb89--zelda-twilight-princess-link-zelda.jpg" alt=""></div>
    <div class="col-5 mt-5 pt-5"><h2><i class="fas fa-paint-brush fa-2x"></i> Now Accepting Art Submissions</h2> <h3>New Art Winner Every Month, details:</h3>
        <div>Your art could be hosted live on this page! In order to enter you must provide the source file of any art piece, this art must also be of or inspired by the <b>Legend of Zelda franchise</b>. The winner will have art displayed for a week on this site and receive a $100 dollar prize! Goodluck with all the submissions!</div> <button class="btn btn-dark">Submit Art</button></div>
    </div>
 
-  <div class="row reviews justify-content-around text-center">
-  <div class="col-3"><div class="card">
+  <div class="row light reviews justify-content-around text-center py-5">
+  <div class="col-3"><div class="card shadow">
     <div class="card-body">
-      <h2>"Quick and easy tips for when you're stuck"</h2>
+      <h2>"Quick tips for when you're stuck"</h2>
       <p>fan:</p>
       <p>Tyler Hawks</p>
     </div>
   </div></div>
   <div class="col-4">
-    <div class="card">
+    <div class="card shadow">
       <div class="card-body">
         <i class="far fa-star fa-2x"></i><i class="far fa-star fa-2x"></i><i class="far fa-star fa-2x"></i><i class="far fa-star fa-2x"></i><i class="far fa-star fa-2x"></i>
         <h2>"Best place for speedrunning clips and community!"</h2>
@@ -125,7 +125,7 @@
     </div>
   </div>
   <div class="col-3">
-    <div class="card">
+    <div class="card shadow">
       <div class="card-body">
         <h2>"Connect with new life-long friends." </h2>
         <p>fan:</p>
@@ -134,11 +134,21 @@
     </div>
   </div>
   </div>
-
+ <div class="row py-5 lightgreen">
+   <div class="col-12 offset-1 text-white"><h2>"And that, Midna, is why.... I need you."</h2>
+  <p>Join a community that supports everything Twilight Princess, you're the hero Hyrule needs!</p></div>
+ </div>
 
 </main>
 
-
+<footer>
+  <nav class="navbar navbar-light bg-light">
+    <a class="navbar-brand" href="#">
+      <img src="https://gtswiki.gt-beginners.net/decal/png/40/86/73/8512384943843738640_1.png" width="30" height="30" class="d-inline-block align-top" alt="">
+      CodeWorks
+    </a>
+  </nav>
+</footer>
 
 
 
