done with header card

--- a/index.html
+++ b/index.html
@@ -1,157 +1,187 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <title>Twilight Guide</title>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
-    <link rel="stylesheet" href="style.css">
-  </head>
-  <body class="text white">
-      <nav class="navbar navbar-expand-lg navbar-light nav-color text-white sticky-top">
-        <a class="navbar-brand text-white" href="#">Twilight Guide</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarText">
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-              <a class="nav-link text-white" href="#">Home <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link text-white" href="#">Walkthrough</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link text-white" href="#">Character Lore</a>
-            </li>
-          </ul>
-          <span class="navbar-text">
-            <div class="input-group">
-              <input type="text" class="form-control" placeholder="Hey Listen (search)" aria-label="search"
-                aria-describedby="button-addon2">
-              <div class="input-group-append"></nav>
+<head>
+  <title>Twilight Guide</title>
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
+    integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
+    crossorigin="anonymous" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
+    integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
+    crossorigin="anonymous" />
+  <link rel="stylesheet" href="style.css">
+</head>
+
+<body class="text white">
+  <nav class="navbar navbar-expand-lg navbar-light nav-color text-white sticky-top">
+    <a class="navbar-brand text-white" href="#">Twilight Guide</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
+      aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarText">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+          <a class="nav-link text-white" href="#">Home <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link text-white" href="#">Walkthrough</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link text-white" href="#">Character Lore</a>
+        </li>
+      </ul>
+      <span class="navbar-text">
+        <div class="input-group">
+          <input type="text" class="form-control" placeholder="Hey Listen (search)" aria-label="search"
+            aria-describedby="button-addon2">
+          <div class="input-group-append">
+  </nav>
 
 
-                <!-- to do, line up left side of input field, finish with more input fields, add text over top of image -->
-<header class="container-fluid">
-  <div class="row linkhead text-center">
-     <div class="col-md-3 offset-1">
-      <form class="cardtype">
-        <div class="form-group row justify-content-center">
-          <div class="col-sm-10">
-            <h2>sign up for event reminders</h2>
-            <input type="email" class="form-control" id="inputEmail3" placeholder="Name">
-          </div>
-        </div>
-        <div class="form-group row justify-content-center">
-          <div class="col-sm-10">
-            <input type="password" class="form-control" id="inputPassword3" placeholder="Email">
-          </div>
-          <div class="form-group row pt-3 justify-content-center">
-            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="Suggestions?"></textarea>
-          </div>
-          </div>
-        <div class="form-group row justify-content-center">
-          <div class="col-sm-2">Receive Text Reminders?</div>
-          <div class="col-sm-10">
-            <div class="form-check">
-              <input class="form-check-input" type="checkbox" id="gridCheck1">
-              </label>
+  <!-- to do, line up left side of input field, finish with more input fields, add text over top of image -->
+  <header class="container-fluid">
+    <div class="row linkhead text-center">
+      <div class="col-md-3 offset-1">
+        <form class="cardtype">
+          <div class="form-group row justify-content-center">
+            <div class="col-sm-10">
+              <h2>sign up for event reminders</h2>
+              <input type="email" class="form-control" id="inputEmail3" placeholder="Name">
             </div>
           </div>
+          <div class="form-group row justify-content-center">
+            <div class="col-sm-10">
+              <input type="password" class="form-control" id="inputPassword3" placeholder="Email">
+            </div>
+            <div class="form-row justify-content-center py-3">
+              <div class="col-4">
+                <input type="text" class="form-control input-sm" placeholder="Phone">
+              </div>
+              <div class="col-5">
+                <input type="text" class="form-control input-sm" placeholder="zip">
+              </div>
+            </div>
+            <div class="form-group row pt-3">
+              <textarea class="col-12 form-control" id="exampleFormControlTextarea1" rows="3"
+                placeholder="Suggestions?"></textarea>
+            </div>
+          </div>
+          <div class="row custom-control custom-checkbox">
+            <input type="checkbox" class="custom-control-input" id="customCheck1">
+            <label class="custom-control-label" for="customCheck1">Sign up for text reminders?</label>
+          </div>
+          <div class="form-group row py-3">
+            <div class="col-sm-10">
+              <button type="submit" class="btn btn-primary">Submit</button>
+            </div>
+          </div>
+        </form>
+
+      </div>
+
+
+
+    </div>
+
+
+  </header>
+
+  <main class="container-fluid">
+    <div class="community row lightgreen justify-content-around justify-content-center">
+      <div class="col-5 pt-5">
+        <h2>Confused and Lost?</h2>
+        <div>try our extensive guides to conquer all puzzles and banish the shadow! <p>"Our world is one of balance...
+            Just as there is light to drive away darkeness, so, too, is there benevolence to banish evil."</p>
         </div>
-        <div class="form-group row">
-          <div class="col-sm-10">
-            <button type="submit" class="btn btn-primary">Submit</button>
+      </div>
+      <div class="col-5">
+        <div class="card spill darkgreen">
+          <h5 class="card-header text-white">Get Involved</h5>
+          <div class="card-body">
+            <p class="card-text text-white"> <i class="fab fa-redhat fa-2x pr-2"></i>Our brilliant game detectives will
+              help with any questions about our guides.</p>
+            <p class="card-text text-white"><i class="fas fa-angle-double-up fa-2x pr-2"></i>Level up your experience
+              with extensive lore</p>
+            <p class="card-text text-white"><i class="fab fa-discord fa-2x pr-2"></i>Connect to other players through
+              our discord</p>
+            <p class="card-text text-white"><i class="fas fa-running fa-2x pr-2"></i>Discover the secrets behind
+              speed-running pros! </p>
           </div>
         </div>
-      </form>
-
-  </div>
-    
-
-  
-</div>
-
-
-</header>
-
-<main class="container-fluid" >
-<div class="community row lightgreen justify-content-around justify-content-center">
-  <div class="col-5 pt-5">
-    <h2>Confused and Lost?</h2>
-    <div>try our extensive guides to conquer all puzzles and banish the shadow! <p>"Our world is one of balance... Just as there is light to drive away darkeness, so, too, is there benevolence to banish evil."</p></div>
-  </div>
-  <div class="col-5">
-    <div class="card spill darkgreen">
-      <h5 class="card-header text-white">Get Involved</h5>
-      <div class="card-body">
-        <p class="card-text text-white"> <i class="fab fa-redhat fa-2x pr-2"></i>Our brilliant game detectives will help with any questions about our guides.</p>
-        <p class="card-text text-white"><i class="fas fa-angle-double-up fa-2x pr-2"></i>Level up your experience with extensive lore</p>
-        <p class="card-text text-white"><i class="fab fa-discord fa-2x pr-2"></i>Connect to other players through our discord</p>
-        <p class="card-text text-white"><i class="fas fa-running fa-2x pr-2"></i>Discover the secrets behind speed-running pros! </p>
       </div>
     </div>
-  </div>
-</div>
-<!-- fix margin of the spill and these two element margins, the button needs adjusting -->
-   <div class="about row pt-5 justify-content-around light">
-   <div class="col-5"><img class="mid picshadow" src="https://i.pinimg.com/236x/c8/d0/ee/c8d0eeacefb644f627e2a7572d5ceb89--zelda-twilight-princess-link-zelda.jpg" alt=""></div>
-   <div class="col-5 mt-5 pt-5"><h2><i class="fas fa-paint-brush fa-2x"></i> Now Accepting Art Submissions</h2> <h3>New Art Winner Every Month, details:</h3>
-       <div>Your art could be hosted live on this page! In order to enter you must provide the source file of any art piece, this art must also be of or inspired by the <b>Legend of Zelda franchise</b>. The winner will have art displayed for a week on this site and receive a $100 dollar prize! Goodluck with all the submissions!</div> <button class="btn btn-dark">Submit Art</button></div>
-   </div>
-
-  <div class="row light reviews justify-content-around text-center py-5">
-  <div class="col-3"><div class="card shadow">
-    <div class="card-body">
-      <h2>"Quick tips for when you're stuck"</h2>
-      <p>fan:</p>
-      <p>Tyler Hawks</p>
-    </div>
-  </div></div>
-  <div class="col-4">
-    <div class="card shadow">
-      <div class="card-body">
-        <i class="far fa-star fa-2x"></i><i class="far fa-star fa-2x"></i><i class="far fa-star fa-2x"></i><i class="far fa-star fa-2x"></i><i class="far fa-star fa-2x"></i>
-        <h2>"Best place for speedrunning clips and community!"</h2>
-        <p>fan:</p>
-        <p>Jaden Boozle</p>
+    <!-- fix margin of the spill and these two element margins, the button needs adjusting -->
+    <div class="about row pt-5 justify-content-around light">
+      <div class="col-5"><img class="mid picshadow"
+          src="https://i.pinimg.com/236x/c8/d0/ee/c8d0eeacefb644f627e2a7572d5ceb89--zelda-twilight-princess-link-zelda.jpg"
+          alt=""></div>
+      <div class="col-5 mt-5 pt-5">
+        <h2><i class="fas fa-paint-brush fa-2x"></i> Now Accepting Art Submissions</h2>
+        <h3>New Art Winner Every Month, details:</h3>
+        <div>Your art could be hosted live on this page! In order to enter you must provide the source file of any art
+          piece, this art must also be of or inspired by the <b>Legend of Zelda franchise</b>. The winner will have art
+          displayed for a week on this site and receive a $100 dollar prize! Goodluck with all the submissions!</div>
+        <button class="btn btn-dark">Submit Art</button>
       </div>
     </div>
-  </div>
-  <div class="col-3">
-    <div class="card shadow">
-      <div class="card-body">
-        <h2>"Connect with new life-long friends." </h2>
-        <p>fan:</p>
-        <p>Brooke Major</p>
+
+    <div class="row light reviews justify-content-around text-center py-5">
+      <div class="col-3">
+        <div class="card shadow">
+          <div class="card-body">
+            <h2>"Quick tips for when you're stuck"</h2>
+            <p>fan:</p>
+            <p>Tyler Hawks</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-4">
+        <div class="card shadow">
+          <div class="card-body">
+            <i class="far fa-star fa-2x"></i><i class="far fa-star fa-2x"></i><i class="far fa-star fa-2x"></i><i
+              class="far fa-star fa-2x"></i><i class="far fa-star fa-2x"></i>
+            <h2>"Best place for speedrunning clips and community!"</h2>
+            <p>fan:</p>
+            <p>Jaden Boozle</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-3">
+        <div class="card shadow">
+          <div class="card-body">
+            <h2>"Connect with new life-long friends." </h2>
+            <p>fan:</p>
+            <p>Brooke Major</p>
+          </div>
+        </div>
       </div>
     </div>
-  </div>
-  </div>
- <div class="row py-5 lightgreen">
-   <div class="col-12 offset-1 text-white"><h2>"And that, Midna, is why.... I need you."</h2>
-  <p>Join a community that supports everything Twilight Princess, you're the hero Hyrule needs!</p></div>
- </div>
+    <div class="row py-5 lightgreen">
+      <div class="col-12 offset-1 text-white">
+        <h2>"And that, Midna, is why.... I need you."</h2>
+        <p>Join a community that supports everything Twilight Princess, you're the hero Hyrule needs!</p>
+      </div>
+    </div>
 
-</main>
+  </main>
 
-<footer>
-  <nav class="navbar navbar-light bg-light">
-    <a class="navbar-brand" href="#">
-      <img src="https://gtswiki.gt-beginners.net/decal/png/40/86/73/8512384943843738640_1.png" width="30" height="30" class="d-inline-block align-top" alt="">
-      CodeWorks
-    </a>
-  </nav>
-</footer>
-
-
-
+  <footer>
+    <nav class="navbar navbar-light bg-light">
+      <a class="navbar-brand" href="#">
+        <img src="https://gtswiki.gt-beginners.net/decal/png/40/86/73/8512384943843738640_1.png" width="30" height="30"
+          class="d-inline-block align-top" alt="">
+        CodeWorks
+      </a>
+    </nav>
+  </footer>
 
 
 
@@ -159,10 +189,20 @@
 
 
 
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-  </body>
+
+
+
+  <!-- Optional JavaScript -->
+  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
+  </script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
+  </script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
+  </script>
+</body>
+
 </html>
