--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
     integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
     crossorigin="anonymous" />
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;400;500&family=Ubuntu&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
 
@@ -46,7 +48,7 @@
   </nav>
 
 
-  <!-- to do, line up left side of input field, finish with more input fields, add text over top of image -->
+  <!-- to do, add text over top of image, and label for the card -->
   <header class="container-fluid">
     <div class="row linkhead text-center">
       <div class="col-md-3 offset-1">
@@ -80,15 +82,16 @@
           </div>
           <div class="form-group row py-3">
             <div class="col-sm-10">
-              <button type="submit" class="btn btn-primary">Submit</button>
+              <button type="submit" class="btn btn-dark">Submit</button>
             </div>
           </div>
-        </form>
-
+        </form> 
       </div>
 
 
 
+    
+    
     </div>
 
 
@@ -96,7 +99,7 @@
 
   <main class="container-fluid">
     <div class="community row lightgreen justify-content-around justify-content-center">
-      <div class="col-5 pt-5">
+      <div class="col-5">
         <h2>Confused and Lost?</h2>
         <div>try our extensive guides to conquer all puzzles and banish the shadow! <p>"Our world is one of balance...
             Just as there is light to drive away darkeness, so, too, is there benevolence to banish evil."</p>
