--- a/index.html
+++ b/index.html
@@ -126,10 +126,10 @@
     </div>
     <!-- fix margin of the spill and these two element margins, the button needs adjusting -->
     <div class="about row justify-content-around light align-content-bottom">
-      <div class="col-5 p-5"><img class=" picshadow"
+      <div class="col-12 col-md-5 p-5"><img class=" picshadow"
           src="https://i.pinimg.com/236x/c8/d0/ee/c8d0eeacefb644f627e2a7572d5ceb89--zelda-twilight-princess-link-zelda.jpg"
           alt=""></div>
-      <div class="col-5 p-5">
+      <div class="col-12 col-md-5 p-5">
         <h2><i class="fas fa-paint-brush fa-2x"></i> Now Accepting Art Submissions</h2>
         <h3>New Art Winner Every Month, details:</h3>
         <div>Your art could be hosted live on this page! In order to enter you must provide the source file of any art
